Fixes #15241: Add simple example to docs for collapse plugin

--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -1146,6 +1146,11 @@ h1[id] {
   overflow: auto;
 }
 
+/* Simple collapse example */
+#collapseExample .well {
+  margin-bottom: 0;
+}
+
 /* Don't wrap event names in Events tables in JS plugin docs */
 .bs-events-table > thead > tr > th:first-child,
 .bs-events-table > tbody > tr > td:first-child {
